      - The debugger now generates DASM-compatible disassembled code,
        which can be saved to an external file.  This disassembly is
        based on both a static and runtime analysis, and is extremely
        accurate.  It also automatically differentiates between
        CODE/PGFX/GFX/DATA/ROW areas, whereas normal Distella
        only differentiates between CODE/GFX/ROW.  For now, only
        single-bank (4K) ROMs are supported.

      - The disassembly now recognizes various TIA read/write mirrors,
        and marks them as such (for example, INPT4.30 instead of INPT4
        for address $3C).

      - Fixed labelling in ROW directives; it wasn't accurately setting
        a label in the case where it occurred in the middle of the data.

  * Fixed redundant "New console created" message when entering the same
    ROM multiple times from the ROM launcher.

  * Updated profile database for "BasketBall" ROMs; the joysticks are now
    swapped by default, which allows one and two-player games to work
    correctly.

  * Changed colour of the 'current PC indicator' in the debugger to
    match the one used for line selection.  This makes it easier to
    see for those with problems seeing lighter colours.

-Have fun!


3.8 to 3.8.1: (March 3, 2013)

  * Added support for TIA RSYNC writes, thanks to Omegamatrix of AtariAge.
    This allows the recently released "Extra Terrestrials" ROM to run, as
    well as improving emulation of "Fatal Run" and several other test ROMs.

  * Fixed typo in TIA HMOVE writes, thanks to Thomas Jentzsch.  This fixes
    the constant collision issues in "Kool-Aid Man", and several other
    homebrew ROMs.

  * Fixed sound issues on OSX PPC machines (all sound was in little-endian
    format, but PPC is big-endian).

  * The OSX DMG archive now contains proper modification dates.


3.7.5 to 3.8: (February 21, 2013)

  * Huge changes to the sound system:
      - The sound code now uses 16-bit signed samples instead of 8-bit